fix: update ORCA input header in create_orca_input notebook

--- a/amp_qmmm_scripts/create_orca_input.ipynb
+++ b/amp_qmmm_scripts/create_orca_input.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3ddcd752",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e583fa4b",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "44d564fe",
    "metadata": {},
    "outputs": [
@@ -72,14 +72,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "fe915909",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Prepare ORCA input file content\n",
     "orca_input_lines = []\n",
-    "orca_input_lines.append('! B3LYP def2-SVP TightSCF')  # Example header, adjust as needed\n",
+    "orca_input_lines.append('! B3LYP def2-SVP TightSCF Engrad')  # Example header, adjust as needed\n",
     "orca_input_lines.append('%pointcharges \"charges.pc\"')\n",
     "orca_input_lines.append('* xyz 0 1')\n",
     "\n",
